@@ -202,6 +202,8 @@ BUGFIXES:
   ZOOKEEPER-608. Receipt of ACK from observer should not be logged as ERROR
   (henry via mahadev)
 
+  ZOOKEEPER-647. hudson failure in testLeaderShutdown (flavio via mahadev)
+
 IMPROVEMENTS:
   ZOOKEEPER-473. cleanup junit tests to eliminate false positives due to
   "socket reuse" and failure to close client (phunt via mahadev)
